--- a/src/views/users.html
+++ b/src/views/users.html
@@ -32,6 +32,7 @@
     </div>
 
   </body>
+  <script src="https://cdn.socket.io/4.6.0/socket.io.min.js" integrity="sha384-c79GN5VsunZvi+Q/WObgk2in0CbZsHnjEqvFxC5DxHn9lTfNce2WW6h2pH6u/kF+" crossorigin="anonymous"></script>
   <script src="scripts/http.js"></script>
   <script src="scripts/users.js"></script>
 </html>
