--- a/src/views/users.html
+++ b/src/views/users.html
@@ -47,6 +47,22 @@
       .port {
         color: #333; /* Màu đen đậm */
       }
+		/* Thay đổi phần CSS của bạn */
+#logger {
+  margin-top: 2vw; /* Đổi từ pixel sang vw cho khoảng cách từ trên cùng */
+  border: 1px solid #ddd;
+  padding: 1.5vw; /* Đổi từ pixel sang vw cho padding */
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+  max-height: 80vh; /* Giới hạn chiều cao của khung logger */
+  overflow-y: auto; /* Tạo thanh cuộn khi nội dung vượt quá chiều cao */
+}
+
+#logList {
+  list-style: none;
+  padding: 0;
+  max-height: 100%; /* Đảm bảo chiều cao của logList không vượt quá chiều cao của khung logger */
+  overflow-y: auto; /* Tạo thanh cuộn khi nội dung vượt quá chiều cao */
+}
     </style>
   </head>
   <body>
@@ -65,7 +81,10 @@
         <!-- Device status rows will be dynamically added here -->
       </tbody>
     </table>
-
+<div id="logger">
+  <h2>Logger</h2>
+  <ul id="logList"></ul>
+</div>
     <script
       src="https://cdn.socket.io/4.6.0/socket.io.min.js"
       integrity="sha384-c79GN5VsunZvi+Q/WObgk2in0CbZsHnjEqvFxC5DxHn9lTfNce2WW6h2pH6u/kF+"
